tests/error/function_used.gw
#! [contains] has already been defined in the same scope
var int i;
fun void i(){}
